# court

./: .vimrc  CMakeLists.txt  README.md
MathFunctions/: MathFunctions.h
cache/clear_cache/: README.txt  build.sh  clear_cache.c  clear_cache.h
cmake/: CMakeLists.txt  TutorialConfig.h.in  tutorial.c
cmake_tutorial/: CMakeLists.txt
cmake_tutorial/MathFunctions/: mysqrt.c
doc/simd/: NEON learning notes.msg  SIMDLib Training.pptx  TI optimization notes.msg
doc/simd/arm/: Neon Training Course for Dolby.pptx  introductiontoarmv8aarch64-pub-151021122947-lva1-app6891.pptx
